--- a/templates/eos/ethernet_interfaces.j2
+++ b/templates/eos/ethernet_interfaces.j2
@@ -8,9 +8,9 @@
 {% for interface in range(1, ethernet_interface_count + 1) %}
    {%- set interface_name = "ethernet" + interface | string %}
 interface Ethernet{{ interface }}
-{{ description(ethernet_interfaces, interface_name) }}
-{{ ethernet_l2_settings(ethernet_interfaces, interface_name) }}
-{{ ethernet_l3_settings(ethernet_interfaces, interface_name) }}
-{{ state(ethernet_interfaces, interface_name) }}
+{{ description(ethernet_interfaces, interface_name) -}}
+{{ ethernet_l2_settings(ethernet_interfaces, interface_name) -}}
+{{ ethernet_l3_settings(ethernet_interfaces, interface_name) -}}
+{{ state(ethernet_interfaces, interface_name) -}}
 !
 {% endfor %}
