--- a/templates/eos/loopback_interfaces.j2
+++ b/templates/eos/loopback_interfaces.j2
@@ -7,10 +7,8 @@
 {% for interface in loopback_interfaces.keys() %}
    {%- set interface_name = interface %}
 interface {{ interface }}
-{{ description(loopback_interfaces, interface_name) }}
-{{ loopback_l3_settings(loopback_interfaces, interface_name) }}
-{{ state(loopback_interfaces, interface_name) }}
+{{ description(loopback_interfaces, interface_name) -}}
+{{ loopback_l3_settings(loopback_interfaces, interface_name) -}}
+{{ state(loopback_interfaces, interface_name) -}}
 !
 {% endfor %}
-
-
