--- a/templates/eos/routing_ospf.j2
+++ b/templates/eos/routing_ospf.j2
@@ -8,9 +8,9 @@
 router ospf {{ ospf_process_id }}
    router-id {{ router_id }}
    passive-interface default
-{{ ethernet_interface_ospf_passive_interfaces(ethernet_interfaces, ethernet_interface_count) }}
-{{ loopback_interface_ospf_passive_interfaces(loopback_interfaces) }}
-{{ ethernet_interfaces_ospf_networks(ethernet_interfaces, ethernet_interface_count) }}
+{{ ethernet_interface_ospf_passive_interfaces(ethernet_interfaces, ethernet_interface_count) -}}
+{{ loopback_interface_ospf_passive_interfaces(loopback_interfaces) -}}
+{{ ethernet_interfaces_ospf_networks(ethernet_interfaces, ethernet_interface_count) -}}
 {{ loopback_interface_ospf_networks(loopback_interfaces) }}
    max-lsa 12000
-
+!
