--- a/templates/nxos/ethernet_interfaces.j2
+++ b/templates/nxos/ethernet_interfaces.j2
@@ -8,8 +8,8 @@
 {% for interface in range(1, ethernet_interface_count + 1) %}
    {%- set interface_name = "ethernet" + interface | string %}
 interface Ethernet1/{{ interface | string }}
-{{ description(ethernet_interfaces, interface_name) }}
-{{ ethernet_l2_settings(ethernet_interfaces, interface_name) }}
-{{ ethernet_l3_settings(ethernet_interfaces, interface_name, ospf_process_id) }}
+{{ description(ethernet_interfaces, interface_name) -}}
+{{ ethernet_l2_settings(ethernet_interfaces, interface_name) -}}
+{{ ethernet_l3_settings(ethernet_interfaces, interface_name, ospf_process_id) -}}
 {{ state(ethernet_interfaces, interface_name) }}
 {% endfor %}
